--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,8 +2,9 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'FCB DBT POC'
 version: '1.0.0'
+require-dbt-version: '>=1.4.6'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
