--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'FCB DBT POC'
+name: 'FCB_DBT_POC'
 version: '1.0.0'
 require-dbt-version: '>=1.4.6'
 config-version: 2
