--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'FCB_DBT_POC'
+name: 'my_fcb_project'
 version: '1.0.0'
 require-dbt-version: '>=1.4.6'
 config-version: 2
@@ -37,7 +37,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
+  my_fcb_project:
+    staging:
+      +materialized: view
+    raw_vault:
+      +materialized: table
+    business_vault:
       +materialized: table
