--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - package: Datavault-UK/dbtvault
-    version: [">=0.9.4", "<0.10.0"]
+  - package: Datavault-UK/automate_dv
+    version: 0.11.2
