--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,5 @@
 packages:
-  - package: Datavault-UK/automate_dv
-    version: 0.11.2
+  - package: Datavault-UK/dbtvault
+    version: 0.9.4
+  - package: dbt-labs/dbt_utils
+    version: 1.0.0
