--- a/packages.yml
+++ b/packages.yml
@@ -3,3 +3,5 @@ packages:
     version: 0.9.4
   - package: dbt-labs/dbt_utils
     version: 1.0.0
+  - package: Datavault-UK/automate_dv
+    version: 0.9.7
